Modificar as collections de imutáveis para mutáveis